# dmc

./: ABOUT  Dockerfile.clang14  Dockerfile.clang15  Dockerfile.clang17  License.txt  README.md  chown-after-docker.sh  make_run_clang.py  run_taint_pass.sh  taint_copiers.txt  update_copyright.py
condmerge/: CMakeLists.txt  condmerge.cpp  connect_flows.py  summarize.py  taint.cpp
gpt/: ask_gpt.py  func_info.json  func_taint3.txt  funclist04.json  gen_combined_answers.sh  gpt_to_taint2.py  parse_gpt_ans.py  print_proto.py
toybench/: alias01.c  alias02.c  mal-client-2.c  mal-client-3.c
